--- a/.gitlab/ci/release.gitlab-ci.yml
+++ b/.gitlab/ci/release.gitlab-ci.yml
@@ -55,7 +55,7 @@
   needs:
   - 'helper images'
   - 'test coverage report'
-  - 'binaries darwin/amd64'
+  - 'binaries darwin/amd64 darwin/arm64'
   - 'binaries freebsd/386 freebsd/amd64 freebsd/arm'
   - 'binaries linux/386 linux/amd64 linux/arm linux/arm64 linux/s390x'
   - 'binaries windows/386 windows/amd64'
