--- a/.gitlab/ci/prepare.gitlab-ci.yml
+++ b/.gitlab/ci/prepare.gitlab-ci.yml
@@ -33,6 +33,14 @@ prepare alpine-entrypoint image:
     BUILD_IMAGE: registry.gitlab.com/gitlab-org/gitlab-runner/alpine-entrypoint:latest
     BUILD_DOCKERFILE: ./tests/dockerfiles/alpine-entrypoint/Dockerfile
 
+prepare alpine-entrypoint-stderr image:
+  extends:
+  - .image_builder
+  - .rules:prepare:alpine-entrypoint:image:merge-requests
+  variables:
+    BUILD_IMAGE: registry.gitlab.com/gitlab-org/gitlab-runner/alpine-entrypoint-stderr:latest
+    BUILD_DOCKERFILE: ./tests/dockerfiles/alpine-entrypoint/Dockerfile.stderr
+
 prepare alpine-id-overflow image:
   extends:
   - .image_builder
