Add fips building to pipeline
Initial fips commit:

Build: Runner binaries, go compiler, rpm package

add make to go fips job

Fix building ci image

fix fips go docker variables

fix applying patch in CI

bump CI image version

Install needed dependencies in go-fips image

make packages depend on fips binaries as well

add -y flags to dnf

--- a/.gitlab/ci/package.gitlab-ci.yml
+++ b/.gitlab/ci/package.gitlab-ci.yml
@@ -8,6 +8,7 @@
   - 'helper images'
   - 'helper images binaries'
   - binaries
+  - binaries-fips
   before_script:
   - |
     # checking GPG signing support
@@ -46,3 +47,4 @@ package-rpm:
       - package-rpm-64bit
       - package-rpm-32bit
       - package-rpm-ibm
+      - package-rpm-fips
