--- a/.gitlab/ci/release.gitlab-ci.yml
+++ b/.gitlab/ci/release.gitlab-ci.yml
@@ -31,6 +31,8 @@
       TARGET_ARCHS: amd64 arm64 ppc64le
     - IMAGE_FLAVOR: alpine3.14
       TARGET_ARCHS: amd64 arm64 ppc64le
+    - IMAGE_FLAVOR: fips
+      TARGET_ARCHS: amd64
     # we build s390x images on their own, as they don't play nicely when built
     # concurrently: https://gitlab.com/gitlab-org/gitlab-runner/-/issues/28392
     - IMAGE_FLAVOR: ubuntu
