--- a/.gitlab/ci/_common.gitlab-ci.yml
+++ b/.gitlab/ci/_common.gitlab-ci.yml
@@ -24,7 +24,7 @@ variables:
   DEPENDENCY_SCANNING_DISABLED: "true"
   TRANSFER_METER_FREQUENCY: "5s"
   GO111MODULE: "on"
-  GO_FIPS_VERSION: "1.17.2-1"
+  GO_FIPS_VERSION: "1.17"
   GO_FIPS_IMAGE: registry.gitlab.com/gitlab-org/gitlab-runner/go-fips:$GO_FIPS_VERSION
 
 default:
