build fips helper images

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
 - prepare
+- fips helper binaries
 - prebuild
 - test
 - coverage
@@ -13,6 +14,7 @@ include:
 - local: /.gitlab/ci/_common.gitlab-ci.yml
 - local: /.gitlab/ci/_rules.gitlab-ci.yml
 - local: /.gitlab/ci/prepare.gitlab-ci.yml
+- local: /.gitlab/ci/fips-helper-binaries.gitlab-ci.yml
 - local: /.gitlab/ci/prebuild.gitlab-ci.yml
 - local: /.gitlab/ci/test.gitlab-ci.yml
 - local: /.gitlab/ci/coverage.gitlab-ci.yml
